exploring angular's css encapsulation - Note: It's becoming common to use some sort of css name spacing type standard such as BEM  (getbem.com) or Smacss (smacss.com)  where your class names have the names of components or pages appended to them, or there is some higher level class that contains all of your code.  Then when you apply styles to your elements, you style them using very specific class names.  This can become cumbersome, and can really interfere with the semantics of your code.  Angular component styling solves this problem.

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,5 @@ button {
 .toast-warning {
   background-color: #f89406;
 }
+
+h2 { color: green;}
